# Airlines-Pipeline_Dagster_dbt_Snowflake

airlines-pipeline/: README.md  profiles.yml  pyproject.toml
airlines-pipeline/.dg/: telemetry.yaml
airlines-pipeline/.tmp_dagster_home_96_1wec5/history/: runs.db
airlines-pipeline/.tmp_dagster_home_96_1wec5/history/runs/: .db  008407f5-e729-4b7f-b985-2dcb46a01f11.db  06badbb9-3277-4431-b6e0-87c036f23fd1.db  07aa16a1-cdbf-4ea6-b86d-cd26b1a175f6.db  0ebc53b8-722d-42e3-8272-f8913203e549.db  0fef0936-cbc6-4a9e-aba5-604d43337ea0.db  108f59ba-4aec-46fb-b70a-34522c2589c2.db  11a38833-c625-4c61-859e-5c3fc6dae966.db  1317194b-8f60-40bd-a0b5-406b2c592a3a.db  29923240-9700-4adc-a12a-35ec7ac17ec4.db  2b4d857d-d768-4a0e-9a33-8579d98b13d1.db  2c4d079d-67e2-471a-88bf-bdf42aa0dfc4.db  2d8515e3-c157-42ba-960b-0c419d0b08e7.db  313ddf82-b21d-4531-bdd6-435b5ef1aee1.db  332b8d6b-bb35-4cc9-a9b7-c2ddea895b19.db  3b99b7e6-5fa4-4f8d-9a47-395a9402453a.db  429555b5-53e9-475e-92b9-87cf4872683c.db  (+41 more)
airlines-pipeline/.tmp_dagster_home_96_1wec5/schedules/: schedules.db
airlines-pipeline/.tmp_dagster_home_ljznph6r/history/: runs.db
airlines-pipeline/.tmp_dagster_home_ljznph6r/schedules/: schedules.db
airlines-pipeline/.tmp_dagster_home_tw_6kbuk/history/: runs.db
airlines-pipeline/.tmp_dagster_home_tw_6kbuk/schedules/: schedules.db
airlines-pipeline/.tmp_dagster_home_vfjde57j/history/: runs.db
airlines-pipeline/.tmp_dagster_home_vfjde57j/schedules/: schedules.db
airlines-pipeline/dbt_airlines_stocks/: dbt_project.yml
airlines-pipeline/src/airlines_pipeline/: definitions.py
(+152 files in other folders)
