[project]
name = "airlines_pipeline"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.5",
    "dagster-dbt>=0.29.5",
    "dagster-snowflake>=0.29.5",
    "dagster-webserver>=1.13.5",
    "dbt-core>=1.11.11",
    "dbt-snowflake>=1.11.5",
    "finnhub-python>=2.4.28",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "airlines_pipeline"
registry_modules = [
    "airlines_pipeline.components.*",
]


